--- a/sub_11.html
+++ b/sub_11.html
@@ -110,7 +110,7 @@
 							<span class="b">사진</span>
 							<span>이용국</span><br>
 							<span class="b">추천</span>
-							<span>조사료생산시스템과 정종성 농업연구관, 가축개량평가과 김지혜 농업연구사</span>
+							<span>정종성 농업연구관, 가축개량평가과 김지혜 농업연구사</span>
 						</div>
 					</div>
 					<div class="article-header-image">
