--- a/sub_13.html
+++ b/sub_13.html
@@ -16,9 +16,9 @@
 	<script src="js/script2.js?ver202502"></script>
 <style>
 	:root {
-		--main-color: #B99E64;
+		--main-color: #75AF9B;
 		--text-color-small: #fff;
-		--text-color-title: #FADC6B;
+		--text-color-title: #B2521D;
 	}
 body {
 	background-color: var(--main-color);
@@ -205,17 +205,17 @@ body {
 					<div class="article-header-text">
 						<span>Theme Insight</span>
 						<h2>
-							국민에게는 건강한 축산을,<br>농가에는 지속 가능한 해법을!
+							국산 농산물로 여는<br>기능성 식의약 소재의 미래
 						</h2>
 						<!-- <h4>밥상 위의 작은 혁명</h4> -->
 						<p>
-							기후변화와 노동력 부족, 사료비 부담은 오늘날 축산 농가가 직면한 가장 큰 과제다. 농촌진흥청은 이러한 문제를 해결하고, 국민에게 더 안전하고 건강한 축산물을 보급하기 위해 현장의 변화를 이끄는 다양한 노력을 이어가고 있다. 추위에도 끄떡없는 신품종 풀사료 개발부터, 농가 스스로 사료를 제조할 수 있는 기술 보급, 자동화·데이터 기반의 스마트 축산 확산, 나아가 동물복지를 담보하는 방목생태축산 활성화까지. 건강한 식탁을 제공하는 밑거름이 되기 위해, 농촌진흥청은 지속 가능한 축산의 길을 열어가고 있다.  
+							농촌진흥청은 국내 농산물에 함유된 기능성 성분을 과학적으로 분석하고, 그 결과를 토대로 식의약 소재로 발전시켜 국산 자원의 새로운 가치를 창출하고 있다. 플라보노이드·페놀산·사포닌 등 주요 기능성분 DB 구축에서부터, 참당귀·팥순·흑삼 등 기능성 원료의 인체 적용 시험, 그리고 감초·황기·병풀 등 국산 작물의 재배 표준화까지. 농촌진흥청은 ‘기능성 식의약 소재 국산화’를 통해 국민 건강과 미래 산업의 경쟁력을 동시에 키워가고 있다.
 						</p>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span><br>
-							<span class="b">검토</span>
-							<span>축산자원개발부 기획실</span>
+							<span class="b">도움</span>
+							<span>특용작물이용과 한신희 농업연구관</span>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -230,82 +230,80 @@ body {
 			<div class="article-body-wrap">
 				<div class="article-text">
 					<h4>
-						추위에도 끄떡없는 신품종 풀사료, 국산 조사료의 힘 
+						한국형 농식품 기능성분 DB 
 					</h4>
 					<p>
-						농촌진흥청은 국산 풀사료 자급률을 높이고 축산 농가의 사료비 부담을 덜기 위해 다양한 신품종 사료 작물을 개발해 왔다. 그중에서도 주목할 만한 것은 트리티케일, 알팔파, 사료피 신품종(조온·다온)이다. 국산 풀사료 산업은 이제 단순히 자급률 확보를 넘어 ‘품질 경쟁력’으로 나아가고 있다. 농촌진흥청은 추위에 강한 트리티케일, 발효 안정성을 높인 알팔파, 여름철 논에서도 재배 가능한 사료피 ‘조온’, ‘다온’ 같은 신품종 개발을 통해 농가의 선택지를 넓히고 있다. 
+						농촌진흥청은 국민의 건강한 식생활을 지원하고, 식품의 기능 성분에 대한 정보 요구를 충족하기 위해 ‘한국형 농식품 기능성분 DB’를 농식품올바로를 통해 공개하고 있다. 이 DB는 우리 농산물에 함유된 주요 기능성 성분의 정보를 집약한 것으로, 현재 플라보노이드, 페놀산, 사포닌 등 국민적 관심이 높은 3대 기능 성분이 포함돼 있다.
 					</p>
-					<h5>
-						① 겨울에도 거뜬한 트리티케일
-					</h5>
-					<p>
-						트리티케일은 호밀의 강한 내한성과 밀의 높은 영양가를 합친 작물이다. 추위에 강해 강원도 고랭지를 제외한 전국 어디서나 재배할 수 있고, 최근 재배 면적이 빠르게 늘고 있다. 농촌진흥청은 특히 ‘한미소1호’와 ‘한영’ 같은 신품종을 개발해 기존보다 마른풀 수확량을 10% 이상 높였다.
-					</p>
-					<p>
-						트리티케일의 적정 파종 시기는 10월 중순에서 하순 사이이다. 이 시기에 파종해 이삭이 팬 뒤 4월 중·하순에 수확했을 때, 9월 하순에 이른 파종이나 11월 상순 늦은 파종보다 최소 14% 이상 수확량이 많다. 수확 시기는 출수기(이삭이 패는 시기) 또는 황숙초기(출수 후 20~30일)로 이용 목적에 따라 조절할 수 있다. 가축의 종류와 생장기에 따라 필요한 영양소가 달라지기 때문. 마른풀로 이용할 경우에는 영양가가 높은 출수기에 수확하는 것이 좋고, 배합사료용으로는 출수 후 20~30일쯤에 수확하는 것이 알맞다.
-					</p>
-					<h5>
-						② 발효 안정성을 높인 알팔파
-					</h5>
-					<p>
-						알팔파는 ‘단백질 왕’이라 불릴 정도로 영양가가 높아, 오래전부터 축산 농가가 선호해온 사료작물이다. 하지만 발효사료(사일리지)로 만들 때 발효가 잘 안 되어 상하기 쉽다는 단점이 있었다. 이를 해결하기 위해 농촌진흥청은 알팔파에 특화된 유산균 첨가제 ‘케이시시-44’를 개발했다.
-					</p>
-					<p>
-						이 유산균을 곤포 사일리지 제조 과정에 소량 뿌리면 산도가 빠르게 낮아져 부패균이 억제되고 저장성이 향상된다. 덕분에 풀사료를 오래 보관하며 안정적으로 알팔파 사료를 확보해 경영비를 절감할 수 있다. 
-					</p>
-					<div class="article-image border no-mg">
+					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
-								<img src="contents/sub_13_image_1.jpg">
-								<figcaption>알팔파 수확 모습</figcaption>
-							</figure>
-						</div>
-					</div>
-					<div class="article-image dual-image border">
-						<div class="article-image-container">
-							<figure>
-								<img src="contents/sub_13_image_2.jpg">
-								<figcaption>사료피 신품종 ‘조온’</figcaption>
-							</figure>
-							<figure>
-								<img src="contents/sub_13_image_3.jpg">
-								<figcaption>사료피 신품종 ‘다온’</figcaption>
+								<img src="contents/sub_13_image_1.png">
 							</figure>
 						</div>
 					</div>
 					<h5>
-						③ 여름 논에서도 키우는 조온·다온
+						① 플라보노이드 DB
 					</h5>
 					<p>
-						사료피 ‘조온’과 ‘다온’은 여름철에도 안정적으로 풀사료를 확보할 수 있도록 농촌진흥청이 개발한 품종이다. ‘조온’은 생육 기간이 짧아 기상이변이나 긴급 상황에 대비할 수 있는 조기 수확형 품종이다. 반면 ‘다온’은 수확량이 많고 진한 자주색 이삭이 특징으로, 기존 품종보다 8% 이상 높은 수량성을 보인다. 두 품종 모두 논에서도 잘 자라기 때문에, 여름철에도 건초나 사일리지로 활용할 수 있다. 현재는 실증 재배를 통해 생산성을 검증 중이며, 2026년부터는 본격적으로 종자가 보급될 예정이다.
+						시금치, 양파 등 플라보노이드를 많이 함유하고 있는 국내 농산물 268점에 함유된 476종의 플라보노이드 성분 정보를 제공한다. 플라보노이드는 항산화, 항염, 면역 조절 등 다양한 생리활성을 지닌 물질로 알려져 있으며, DB에는 플라보놀(케르세틴, 캠페롤 등), 플라바논(헤스페리틴, 나린제닌 등), 이소플라본(다이드제인, 제니스틴 등), 플라바놀(카테킨, 에피카테킨 등), 플라본(루테올린, 크리신 등)의 상세 정보가 수록돼 있다.
 					</p>
 					<h5>
-						④ 스마트하게 만드는 섬유질배합사료(TMR)
+						② 페놀산 DB
 					</h5>
 					<p>
-						농촌진흥청은 한우의 영양소 요구량에 맞춰 농가가 직접 사료를 제조할 수 있도록 섬유질배합사료(TMR) 자가 제조 기술을 개발·보급하고 있다. 쌀겨, 맥주박 등 농식품 부산물을 활용해 농가에서 직접 배합·급여할 수 있는 방식으로, 일반 배합사료보다 사료비를 10~40% 절감할 수 있다.
+						페놀산의 종류와 분류, 화학구조, 질량, 자외선 흡광 패턴 등 화학적 특성뿐 아니라, 한국인이 실제 섭취하는 농식품 308점에 함유된 171종의 페놀산 함량 분석 결과가 포함돼 있다. 이 데이터는 우리 농산물의 기능적 가치를 평가하고, 건강기능식품 및 고부가가치 식품 소재 발굴에 활용될 수 있는 기초 자료로 주목받고 있다.
+					</p>
+					<h5>
+						③ 사포닌 DB
+					</h5>
+					<p>
+						고추, 도라지, 인삼, 콩 등 사포닌이 풍부한 국내 농식품 자원 169점을 대상으로 구축됐다. 이 DB에는 총 539종의 사포닌 개별 유도체 화합물에 대한 정보가 수록되어 있으며, 각 화합물의 일반명, 분류, 분자식, 분자량, 화학구조, 배당체 수, 정량값 등이 포함된다.
 					</p>
 					<p>
-						다만 원료의 영양 정보를 잘 이해하고, 가축에 맞는 배합비를 작성하는 기술이 필요하다. 이를 돕기 위해 농촌진흥청은 ‘농가 배합비 작성 프로그램’을 누리집에서 제공하고, 지역별로 ‘한우 자가 TMR 기술 전수 거점농장’을 운영하며 현장 교육을 강화하고 있다. 현재 전국 9개 거점농장이 운영 중으로, 농가가 직접 기술을 배우고 적용할 수 있는 실습의 장이 되고 있다.
+						한국형 농식품 기능성분 DB는 농식품올바로 누리집에 접속해 ‘식품영양·기능성정보 → 기능성성분 검색’ 메뉴를 통해 누구나 확인할 수 있다. 한편, 우리 국민이 즐겨 섭취하는 주요 농식품 700여 점을 대상으로 안토시아닌, 리그난, 알칼로이드, 인지질, 카로티노이드, 파이토스테롤, 식이황화합물 등 7개 신규 기능성분 DB를 추가로 구축하고 있으며, 향후 국민에게 제공되는 기능성분 정보 제공 범위를 지속적으로 확대해 나갈 계획이다.
 					</p>
 					<div class="article-image-text">
 						<figure class="article-image-text-text">
 							<img src="contents/sub_13_text_1.png">
 						</figure>
-						<div class="qr-text">
-							농가 배합비<br>작성 프로그램<br>다운로드 하기
-						</div>
 						<figure class="article-image-text-qr">
 							<img src="contents/sub_13_qr_1.png">
 						</figure>
 					</div>
 					<h4>
-						스마트 축산으로 가는 길
+						기능성 식의약 소재 ‘국산화’로<br>건강 산업의 미래를 열다
 					</h4>
 					<p>
-						축산업은 지금, 전환의 길 위에 서 있다. 노동력 부족과 기후 변화, 사료비 부담 같은 문제들은 농가의 지속 가능성을 위협하고 있다. 이에 농촌진흥청은 스마트 축산 기술을 앞세워 새로운 해법을 제시하고 있다.
+						농촌진흥청은 국내 농산물에서 유래한 기능성 식의약 소재의 국산화를 목표로, 건강기능식품 원료 인정과 천연의약품 소재 개발을 활발히 추진하고 있다. 2024년까지 14건의 기능성 원료를 인정받았으며, 2027년 20건, 2030년 27건으로 확대할 계획이다. 가장 최근 새롭게 기능성을 인정받은 원료로는 참당귀, 팥순, 흑삼 등이 있다. 이들 소재는 모두 국내 농산물을 기반으로 한 고유 자원으로, 해외 의존도가 높았던 기능성 원료 시장에서 국산 대체 소재로의 성장 가능성을 보여준다.
 					</p>
-					<div class="article-image small-image">
+					<div class="article-image">
+						<div class="article-image-container">
+							<figure>
+								<img src="contents/sub_13_image_2.png">
+							</figure>
+						</div>
+					</div>
+					<h5>
+						① 참당귀·황기 복합물 — 전립선 건강 개선
+					</h5>
+					<p>
+						전립선 건강 기능성 제품의 대부분은 해외 원료에 의존하고 있지만, 농촌진흥청은 국산 참당귀와 황기 복합물을 이용해 대체 가능성을 열었다. ㈜서흥헬스케어와 함께 세브란스병원·동탄성심병원 등과의 공동 인체적용시험에서, 만40~75세 남성 100명을 대상으로 12주간 참당귀·황기 복합물(2:1 비율)을 섭취시킨 결과, 잔뇨감·야간뇨 등 주요 증상이 유의적으로 개선됐다. 이는 복합물이 5-알파 환원효소(5α -reductase) 활성을 억제해 전립선 비대를 유발하는 호르몬 ‘DHT(디하이드로테스토스테론)’ 생성을 줄였기 때문으로 분석된다. 이 연구 결과를 바탕으로 해당 복합물은 식품의약품안전처의 ‘전립선 건강’ 개별인정형 원료(식약처 제2024-28호)로 공식 등록됐다.
+					</p>
+					<div class="article-image">
+						<div class="article-image-container">
+							<figure>
+								<img src="contents/sub_13_image_3.png">
+							</figure>
+						</div>
+					</div>
+					<h5>
+						② 팥순 — 체지방 감소
+					</h5>
+					<p>
+						팥을 약 11일간 싹 틔운 ‘팥순’에는 체지방 감소 효과가 있는 아주키사포닌 II(Azukisaponin II)이 다량 함유돼 있다. 농촌진흥청과 경북대 권은영 교수팀이 공동으로 진행한 실험에서, 지방세포에 독성이 없는 농도로 팥순 추출물을 처리한 결과 지방 형성률이 36% 감소했다. 또한 10주간 팥순 추출물을 섭취한 실험쥐는 대조군보다 체중이 약 14%, 체지방이 25% 감소, 반면 근육량은 10% 증가했다. 이는 팥순이 지질합성과 흡수를 억제하고 근육 내 지방산 산화를 촉진하여 에너지 소비를 높인 결과로, 비만 개선 및 체지방 감소에 효과적임이 과학적으로 입증됐다.
+					</p>
+					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_13_image_4.png">
@@ -313,16 +311,10 @@ body {
 						</div>
 					</div>
 					<h5>
-						① 낙농의 부담을 줄이다, ‘국산 로봇착유기’
+						③ 흑삼 — 호흡기 건강 개선
 					</h5>
 					<p>
-						젖소를 기르는 낙농가에게 착유 작업은 전체 노동의 40%를 차지할 만큼 큰 부담이다. 하루도 빠짐없이 반복되는 일이라 시간과 비용도 많이 든다. 농촌진흥청은 이러한 현실을 바꾸기 위해 국산 로봇착유기를 개발해 보급하고 있다.
-					</p>
-					<p>
-						로봇착유기는 젖소의 유방을 자동으로 세척하고, 유두 위치를 인식해 착유기를 스스로 끼운 뒤 우유를 짜낸다. 젖소 한 마리 한 마리의 착유 횟수와 착유량도 자동으로 기록된다. 50두 규모 농가 기준으로 연간 착유 비용을 37%(약 1,700만 원) 절감할 수 있다는 계산이 나왔다. 단순한 노동 절감뿐 아니라, 데이터가 쌓이면 사료 급여 조절이나 건강 관리에도 활용할 수 있어 농가 경영에 도움이 된다.
-					</p>
-					<p>
-						농촌진흥청 국립축산과학원은 로봇착유기에 필요한 핵심 기술을 직접 확보하고 있다. 유두탐지, 세척, 유질 검사 등 20여 건의 특허 기술을 보유하고 있으며, 특히 딥러닝을 적용한 유두탐지 기술은 정확도를 99.0%까지 끌어올렸다. 이렇게 수집된 데이터는 농촌진흥청의 연구개발 데이터 플랫폼에 축적돼, 젖소의 유방염 위험도, 우유 생산성, 사료 급이 현황 등을 확인할 수 있는 지표로 활용된다. 향후에는 농협과 연계해 젖소 개량에도 기여할 전망이다.
+						인삼을 세 번 이상 찌고 말려 만든 흑삼은 전립선 비대증 예방과 간 건강 개선 효과가 확인되며 주목받고 있다. 농촌진흥청은 전립선 비대증(BPH)을 유도한 동물 모델에 4주간 매일 흑삼 추출물을 경구 투여한 결과, 흑삼을 투여하지 않은 대조군에 비해 전립선 무게가 최대 16.9% 감소하였으며, 또한 세포 및 동물모델 실험에서 손상된 간 기능 지표(ALT, AST)가 약 80% 수준까지 회복되는 것으로 나타났다. 이번 연구를 통해 흑삼이 전립선 및 간 건강 유지에 도움을 줄 가능성이 과학적으로 확인되었으며, 2023년에는 제조 및 품질 관리 기준도 표준화되었다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -330,56 +322,61 @@ body {
 								<img src="contents/sub_13_image_5.png">
 							</figure>
 						</div>
-					</div>				
-					<h5>
-						② 가축도 폭염에 지친다, ‘가축사육기상정보시스템’
-					</h5>
-					<p>
-						한여름 무더위는 사람뿐 아니라 가축에게도 큰 스트레스다. 농촌진흥청은 이를 예방하기 위해 ‘가축사육기상정보시스템’을 운영하고 있다. 이 프로그램은 한우, 젖소, 돼지, 닭의 가축더위지수(THI)를 기온과 습도를 바탕으로 실시간 제공한다. 농가는 휴대전화나 컴퓨터로 손쉽게 지수를 확인하고, 기온 변화에 맞춰 사양관리 방법을 조정할 수 있다. 여름철 고온 피해를 줄이는 맞춤형 관리 요령도 함께 안내해 실질적인 도움을 준다. 시스템은 국립축산과학원 누리집 ‘축사로(chuksaro.nias.go.kr)’에서 무료로 이용할 수 있다.
-					</p>
-					<h5>
-						③ 디엔에이 기반 젖소 유전능력평가, 정확도 2배 향상
-					</h5>
-					<p>
-						젖소의 혈통과 생산기록에 디엔에이(DNA) 정보를 더한 ‘유전체 유전능력평가 체계’가 도입됐다. 농촌진흥청은 2만4,000두의 유전체 자료를 분석해 신뢰성을 확보하고, 개체별 능력을 정밀하게 구분할 수 있게 했다. 이를 통해 송아지 유전능력평가의 정확도가 25%에서 60%로 높아졌으며, 씨수소 선발 기간도 평균 5.5년에서 1.5년으로 단축됐다. 낙농가는 조기 평가를 통해 우수 개체를 선별·교배하거나 불필요한 사육비를 줄일 수 있다.
-					</p>
-					<h5>
-						④ 한우 메탄 18% 줄이는 신소재 ‘티아민 이인산’
-					</h5>
-					<p>
-						농촌진흥청은 비타민 B1의 활성형 물질 ‘티아민 이인산’을 활용해 한우의 메탄 배출량을 평균 18% 줄이는 효과를 확인했다. 반추위 내 메탄 생성 조효소와 결합해 발생을 억제하며, 사료 섭취량과 성장률은 유지됐다. 전국 한우 341만 두에 적용 시 연간 약 86만 톤의 온실가스를 줄일 수 있어 축산 분야 탄소 감축 목표의 26% 달성이 가능하다. 농촌진흥청은 특허 출원과 함께 상용화를 추진 중이다.
-					</p>
-					<h4>
-						건강한 축산으로 가는 길, ‘방목생태축산’
-					</h4>
-					<p>
-						농촌진흥청은 최근 ‘방목생태축산’을 활성화하기 위해 제도 개선과 함께 현장 지원을 강화하고 있다. 방목생태축산은 유휴 산지나 농지를 활용해 초지를 조성하고 가축을 방목하는 방식으로, 친환경적이면서도 동물복지와 지속 가능성을 모두 담보할 수 있는 축산 모델이다.
-					</p>
-					<p>
-						이를 위해 농촌진흥청 국립축산과학원은 방목생태축산 지정 농가를 대상으로 국산 목초 ‘그린마스터 4호’를 시범 공급하고 있다. 이 품종은 여름철 고온다습한 환경에 강하고, 수입 품종보다 생산성이 5% 이상 높은 톨 페스큐 신품종이다. 톨 페스큐는 전 세계적으로 초지 조성에 많이 쓰이는 풀인데, 가뭄이나 여름철 고온에도 강해 우리 기후에도 잘 맞는다. 이번에 공급된 종자는 10헥타르 규모의 초지를 만들 수 있는 양으로, 농촌진흥청은 파종 시기에 맞춰 초지 조성과 관리 기술도 함께 지원하고 있다.
-					</p>
-					<p>
-						초지 조성을 위해서는 산지 전용을 해야 하지만 절차가 복잡하고 행정적 비용이 많이 들기 때문에 산지 일시사용 승인을 통해 산지전용 없이 초지를 일시적으로 이용할 수 있다. 하지만 방목 시 보호시설 설치를 해야 하므로 농가 활용도가 저조했다. 농촌진흥청은 산림청·농림축산식품부와 협력해 「산지관리법 시행령」을 개정, 산지 방목 시 의무적으로 설치해야 했던 보호시설 규제를 완화했다. 기존에는 모든 가축에 대해 보호시설을 설치해야 했지만, 소·말·염소·사슴 등 산림 피해 가능성이 낮은 45종은 설치 의무가 면제됐다. 덕분에 농가는 초지를 전용하지 않고도 산지를 활용할 수 있게 되었고, 설비비용과 행정 부담이 크게 줄어들었다.
-					</p>
-					<p>
-						특히 연구 결과, 한우를 산지에 방목했을 때 축사 사육 대비 사료 사용량이 약 10% 절감됐다. 이는 방목생태축산이 단순히 환경에 좋은 것뿐 아니라, 농가의 사료비 절감에도 효과적이라는 의미다. 농촌진흥청은 앞으로도 제도 기반 위에 맞춤형 기술지원을 더해, 농가가 체감할 수 있는 실질적 효과를 높여 나갈 계획이다. 
-						<i class="icon_last"></i>
-					</p>
-					<div class="article-image-text">
-						<figure class="article-image-text-text">
-							<img src="contents/sub_13_text_2.png">
-						</figure>
-						<div class="qr-text">
-							가축사육<br>기상정보시스템<br>다운로드 하기
-						</div>
-						<figure class="article-image-text-qr">
-							<img src="contents/sub_13_qr_2.png">
-						</figure>
-					</div>
-					<div class="article-image big-image">
+					</div>					
+					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_13_image_6.png">
+							</figure>
+						</div>
+					</div>
+					<h4>
+						국산 원료로 건강 산업의 뿌리를 세우다
+					</h4>
+					<p>
+						농촌진흥청은 수입 의존도가 높은 한약·건강기능식품·의약·향장용 원료 작물의 국산화와 산업화 기반 구축을 목표로, 재배기술 표준화와 농가–산업체 상생모델을 추진하고 있다. 무엇보다 이는 단순히 수입을 대체하는 수준을 넘어, 농가와 기업이 함께 성장하는 상생형 산업 생태계를 구축해 국산 식의약 소재 산업의 자립을 견인하고 있다.
+					</p>
+					<h5>
+						① 한약 원료 — 수입 대체 작물의 생산단지 조성
+					</h5>
+					<p>
+						한약재 대부분이 중국 등 외국산에 의존하는 현실을 개선하기 위해, 농촌진흥청은 국산 한약 원료 생산단지를 조성하고 있다. 2024년 2곳에서 시작해 2026년에는 3곳, 2027년까지는 7곳으로 확대할 예정이다.
+					</p>
+					<p>
+						현재 제천과 평택에서는 감초(5ha)를, 영천과 제천에서는 황해쑥(8ha)을 중심으로 지역 농가와 함께 생산이 이뤄지고  있다. 이 사업은 중앙–지방–산업체 간 협력체계를 기반으로,  국산 한약재의 안정적인 생산기반과 품질 표준화를 동시에 확보하기 위한 상생 모델이다.
+					</p>
+					<p>
+						특히 제천은 예로부터 약용작물 재배에 적합한 기후와 토양 조건을 고루 갖춘 지역으로, 약용작물 생산의 최적지로 손꼽힌다. 농촌진흥청은 이러한 지역적 강점을 살려 제천을 국내 육성 약용작물 신품종의 보급 및 산업화 거점 지역으로 육성하고 있다. 현재 제천에서는 농촌진흥청이 개발한 신품종을 중심으로 다양한 사업이 추진 중이다. 대표적으로 황기 ‘아성’ 재배 및 종자 채취 시범사업, 감초 ‘원감’·‘다감’ 전문생산단지 조성, 황해쑥 ‘평안애’ 건강기능식품 원료 계약재배 단지 구축 등이 있다. 
+					</p>
+					<div class="article-image">
+						<div class="article-image-container">
+							<figure>
+								<img src="contents/sub_13_image_7.png">
+							</figure>
+						</div>
+					</div>				
+					<h5>
+						② 건강기능식품 원료 — 산업체 수요 맞춤형 국산 소재 개발
+					</h5>
+					<p>
+						건강기능식품 산업에서의 국산 원료 경쟁력 확보를 위해, 산업체 수요를 반영한 기능성 작물 개발도 본격화되고 있다. 농촌진흥청은 2024년 1건에서 시작해 2026년 3건, 2027년에는 5건으로 확대할 계획이다. 현재 추진 중인 주요 소재는 등골나물(관절 건강), 멸가치(항비만), 식방풍(인지능 개선) 등으로, 산업체와 협력하여 생산기반과 표준화된 재배기술을 확보하고 있다. 이를 통해 지역 농가에는 새로운 소득 작물을, 산업체에는 안정적인 원료 공급망을 제공하는 상생형 생산모델을 완성해가고 있다.
+					</p>
+					<h5>
+						③ 의약·향장 원료 — 바이오소재 작물 재배기술 확립
+					</h5>
+					<p>
+						의약품과 화장품 산업에서도 천연 바이오소재의 국산화를 위한 노력이 이어지고 있다. 농촌진흥청은 2025년 1건에서 시작해 2026년 2건, 2027년에는 3건으로 확대하며, 주요 재배기술을 확립 중이다. 현재 연구 중인 작물은 하늘타리(관절 개선), 터리풀(주름 개선), 병풀(염증 완화) 등이다. 이들은 각 산업체와의 공동연구를 통해 효능 검증과 표준화 재배기술 확립, 상용화 기반 마련을 목표로 하고 있다. 
+						<i class="icon_last"></i>
+					</p>
+					<div class="article-image">
+						<div class="article-image-container">
+							<figure>
+								<img src="contents/sub_13_text_2.png">
+							</figure>
+						</div>
+						<div class="article-image-container">
+							<figure>
+								<img src="contents/sub_13_image_8.png">
 							</figure>
 						</div>
 					</div>
