--- a/sub_11.html
+++ b/sub_11.html
@@ -17,14 +17,15 @@
 
 	<style>
 :root {
-	--main-color: #BB9D59;
+	--main-color: #BA4900;
 	--text-color-small: #fff;
-	--text-color-title: #fff;
-	--text-color-title2: #000;
+	--text-color-title: #F1DCC8;
+	--text-color-title2: #fff;
 }
 
 .article-header-text h2 {
-	font-size: 4rem;
+	font-size: 5rem;
+	word-break: keep-all;
 }
 .article-header-text h3 {
 	font-size: 2.5rem;
@@ -32,9 +33,9 @@
 }
 .article-header-text h3 b {
 	font-weight: 700;
-	text-decoration: underline;
+	/*text-decoration: underline;
 	text-decoration-thickness: 0.1rem;
-	text-underline-offset: 0.3rem;
+	text-underline-offset: 0.3rem;*/
 }
 .column-image figure {
 	margin-bottom: 0.5rem;
@@ -96,21 +97,20 @@
 					<div class="article-header-text">
 						<span>테마 인터뷰</span>
 						<h2>
-							지속 가능한 축산을 향해,<br>
-							열풍건초 생산 시스템으로 새 길을 열다
+							우리 땅의 약초로 여는 <br>K-허브의 시대!
 						</h2>
 						<h3>
-							신용안영농조합법인<br>
-							<b>김태 대표</b>
+							㈜서흥헬스케어<br>
+							<b>박금덕 대표</b>
 						</h3>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
-							<span>이용국</span><br>
+							<span>김준후</span><br>
 							<span class="b">추천</span>
-							<span>정종성 농업연구관, 가축개량평가과 김지혜 농업연구사</span>
+							<span>특용작물이용과 한신희 농업연구관</span>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -125,7 +125,7 @@
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						기후변화와 국제 정세의 불안 속에서, 축산 농가의 ‘사료 자급’은 더 이상 미룰 수 없는 과제가 됐다. 그 한가운데서 김원태 대표는 수입 건초에 의존하던 현실을 넘어, 열풍건초 생산 시스템으로 국산 조사료를 직접 생산하며 스스로 지탱하는 농업을 실현하고 있다. 이는 단순한 사료비 절감을 넘어, 국내 축산 농가가 외부 환경에 흔들리지 않는 지속 가능한 자립 기반을 다지는 일이었다. 
+						국산 약초의 힘이 건강기능식품으로 새롭게 피어나고 있다. 농촌진흥청의 연구성과를 토대로 (주)서흥헬스케어가 우리 땅의 약초를 활용한 전립선 건강기능식품 상용화를 눈앞에 두고 있다. 과학과 산업이 함께 만들어낸 이번 협업의 결실은, 국산 원료로 세계 시장에 도전하는 ‘K-허브’ 시대의 첫걸음이 되고 있다.
 					</p>
 				</div>
 				<div class="article-text">
@@ -137,13 +137,13 @@
 						</div>
 					</div>
 					<h4>
-						기후를 넘어선 기술, 건초 자급의 길을 열다 
+						건강한 삶을 설계하는 기업
 					</h4>
 					<p>
-						아버지로부터 이어받은 축사는 단순한 ‘승계’가 아니라 ‘업그레이드’의 출발점이었다. 김원태 대표는 현장에 디지털 기술을 과감히 도입해 작업을 체계화했고, 효율이 곧 경쟁력이라는 원칙을 축사 운영에 적용했다. 트랙터를 비롯한 각종 장비를 확충하고 축사를 증축했으며, 낙농에는 로봇 착유기를 들여 24시간 운영 효율을 높였다.
+						현대인들에게 ‘건강’은 그 어느 때보다 중요한 화두다. 이때 말하는 건강은 단순히 오래 사는 삶을 위한 필요조건이 아니다. 어떻게 살아가느냐, 즉 ‘삶의 질’을 지켜내는 일이다. 좋은 삶의 질을 유지하기 위해 균형 잡힌 식단은 기본이지만, 바쁜 일상 속에서 모든 영양소를 완벽히 챙기기란 쉽지 않다. 그래서 ‘건강기능식품’ 은 현대인의 필수 동반자가 됐다. 일상 식단에서 부족한 영양소를 보충하고, 내 몸이 필요로 하는 기능성을 채워 넣어 건강한 리듬을 유지하도록 돕는 것이 바로 건강기능식품의 역할인 것이다.
 					</p>
 					<p>
-						이후 김원태 대표의 관심은 효율적인 농장 운영을 넘어, 지속 가능한 생산 구조로 향했다. 기후 변화나 수입 건초의 불안정한 수급에 흔들리지 않기 위해, 김원태 대표는 직접 조사료 생산의 자립화에 나섰다. 그 결과 도입한 것이 바로 농촌진흥청에서 개발·보급한 ‘열풍건초 생산 시스템’이다.
+						이러한 흐름 속에서 (주)서흥헬스케어(이하 서흥헬스케어)는 건강기능식품이 만들어지기까지, 어떤 원료로 어떤 기능을 담을지 연구하고, 그 기능을 가장 잘 전달할 수 있는 제형을 설계 한 뒤, 실제 제품으로 생산해 소비자에게 전달하는 전 과정을 책임지고 있는 건강기능식품 전문 기업이다. 이를 위해 서흥헬스케어는 액상·겔·시럽·스틱젤리·워터젤리·소프트바 등 다양한 제형을 개발해 소비자의 섭취 편의성을 높이고, 병포장·배면스틱·오버캡 등 여러 포장 기술로 제품의 품질과 유통 안정성을 확보했다. 여기에 경질캡슐·정제·분말 제형 시설까지 갖춘 탄탄한 인프라를 기반으로, 국내 주요 식품·제약 대기업과 협업해 다양한 브랜드의 건강기능식품을 안정적으로 생산·공급하며 업계의 신뢰를 쌓아가고 있다. 
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -153,17 +153,10 @@
 						</div>
 					</div>
 					<p>
-						건초는 수분 함량이 20% 미만으로, 한우와 젖소 등 반추 가축을 기르는 데 필수적인 풀사료다. 그러나 국내는 고온다습한 기후 탓에 자연 건조가 쉽지 않아, 해마다 약 100만 톤을 수입하고 있다. 국제 정세에 따라 수급이 불안정하고 가격 변동 폭도 커, 축산 농가의 사료비 부담은 점점 커지고 있다. 
+						“서흥헬스케어는 건강기능식품 분야의 선두주자라고 할 수 있습니다. 한국에서 이 산업이 막 자리 잡기 시작할 때부터 함께 성장해 왔고, 그만큼 오랜 경험과 노하우를 쌓아왔죠. 처음에는 고객사의 요청에 따라 제품을 개발·생산하는 ODM(Original Design Manufacturing) 방식으로 출발했지만, 이제는 한 단계 더 나아가 시장의 흐름과 기술을 직접 제안하며 새로운 제품 방향을 함께 만들어가는 OBM(Original Brand Manufacturer) 형태로 확장하고 있습니다.”
 					</p>
 					<p>
-						“국내에서 건초를 수급하기가 정말 힘들어요. 비가 많이 오고 습도가 높다 보니, 자연 건조만으로는 수분을 20% 미만까지 낮추기가 어렵죠. 예전에는 장마철에만 비가 왔다면 요즘은 사계절 내내 비가 오니까 건초는 아예 꿈도 꿀 수가 없었어요. 그래서 대부분의 축산 농가가 수입 건초를 사용합니다. 냄새가 덜하고, 급여하기도 훨씬 편하거든요.”
-					</p>
-					<p>
-						이러한 현실 속에서 농촌진흥청은 국내에서도 안정적으로 건초를 생산할 수 있는 방법을 찾고자 했다. 그 결과, 2022년 국내 최초로 ‘열풍건초 생산 시스템’을 개발했다. 이 시스템은 풀사료의 수분 함량을 현장에서 30~50% 수준까지 자연 건조한 뒤, 이를 수거해 실내에서 뜨거운 바람으로 20% 미만까지 낮추는 기술이다. 쉽게 말해, 비가 와도 걱정 없이 실내에서 건초를 만드는 기술이다. 
-						김원태 대표는 4년 전부터 농촌진흥청의 열풍건초 생산 시스템을 도입해 자신의 축산 농가에 적용했다. 
-					</p>
-					<p>
-						“10여 년 전, 외국에서 인공 건조 시스템을 본 적이 있었어요. ‘우리도 언젠가 저런 걸 해야겠다’고 생각했죠. 그러던 중 농촌진흥청에서 열풍건초 생산 시스템을 개발했다는 소식을 들었어요. 직접 찾아가 시연회를 보고는 바로 느꼈죠. ‘이건 해야겠다.’ 이후 국립축산과학원과 실증을 진행했고, 농촌진흥청 시범사업을 통해 시스템을 도입하게 됐습니다.”
+						이러한 변화는 단순히 제조 방식을 바꾸는 데 그치지 않았다. 서흥헬스케어는 자체 기획과 연구 역량을 강화하며, 새로운 기능성 원료를 발굴하고 검증하는 산학협력 중심의 연구체계로 발전시켜 나갔다. 그 연장선에서 농촌진흥청 국립원예특작과학원과 협력해 기능성 원료 연구개발에 나섰다. 국립원예특작과학원이 개발한 ‘참당귀·황기 복합물의 전립선 질환 개선 조성물(특허 제10-2021-0140917호)’의 제조 기술을 이전받아 본격적인 연구를 진행했으며, 현재는 연구개발을 모두 완료하고 제품 출시를 앞두고 있다. 
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -173,73 +166,62 @@
 						</div>
 					</div>
 					<blockquote class="quote-normal" style="width: 75%;">
-						금액이나 품질보다 더 중요한 게 ‘자급률’이라고 봅니다. 수입 의존도를 낮춰야 외국과의 무역에서도 유연해지고, 기후나 환율 같은 변수에도 흔들리지 않거든요.
+						국산 약초를 기반으로 한 ‘K-허브 산업’을 선도하며, 우리 땅의 원료로 만든 건강기능식품으로 세계 시장에서 인정받는 기업이 되고 싶습니다.
 					</blockquote>
 					<h4>
-						80도의 바람으로 만드는 국산 건초
+						우리 땅의 약초가 만든 건강의 해답 
 					</h4>
 					<p>
-						김원태 대표가 도입한 열풍건초 생산 시스템은 구조부터 남다르다. 3층으로 설계된 건조기는 열손실을 최소화하고, 위층에서 아래층으로 바람을 순환시켜 일정한 온도로 풀사료를 말린다. 
+						“서흥헬스케어는 기능성이 뛰어난 소재를 찾기 위해 늘 새로운 가능성을 탐색해왔어요. 그러던 중에 농촌진흥청에서 국내산 원료인 ‘참당귀·황기 복합물’이 전립선 건강에 효과가 있다는 연구 결과를 발표했다는 소식을 들었죠. 과학적으로 효능이 입증된 소재라는 점에서 큰 관심이 생겼고, 이후 2021년 ‘바이오그린 연계 농생명혁신기술개발사업’을 통해 본격적으로 원료 개발과 제품화 과정에 함께 참여하게 됐습니다.”
 					</p>
 					<p>
-						“건초를 생산하는 과정은 간단합니다. 먼저 원료를 잘게 잘라 투입하고요. 3층 구조라 3층에서 2층, 2층에서 1층으로 내려가면서 80~90도의 열을 계속 불어넣어요. 투입부터 최종 배출까지 약 15분 정도 걸리고, 건조된 풀사료는 마지막 단계에서 바로 포장까지 진행됩니다. 기계에 따라 시간당 400~800kg까지 처리할 수 있어서, 하루 생산량은 약 10톤 정도예요.”
+						다양한 건강기능식품이 쏟아지는 가운데, 우리 사회는 초고령화 시대로 접어들며 고령층을 위한 맞춤형 제품 개발의 필요성이 그 어느 때보다 커지고 있다. 특히 ‘전립선 비대증’은 고령 남성에게서 흔히 나타나는 질환으로, 배뇨 장애와 잔뇨감, 야간뇨 등 일상 속 불편을 초래한다. 이를 개선하기 위해 많은 이들이 전립선 건강에 좋은 건강기능식품을 섭취해 왔지만, 그동안 이 분야의 원료는 대부분 수입산 쏘팔메토 추출물에 의존해왔다. 
 					</p>
 					<p>
-						열풍건초 생산 시스템의 가장 큰 장점은 기후의 영향을 받지 않아, 언제나 균일한 품질의 국산 건초를 안정적으로 생산할 수 있다는 점이다. 덕분에 김원태 대표의 농장에서는 이제 수입 건초를 사용하는 대신, 국내산 이탈리안라이그라스를 열풍건조 시스템으로 건조·활용하고 있다. 무엇보다 품질이 뛰어나면서도 비용 절감 효과가 크다. 실제로 김원태 대표의 농장은 이 시스템을 통해 연간 약 300톤의 수입 건초를 대체하고 있으며, 그로 인한 사료비 절감 효과는 약 5~6천만 원, 전체적으로는 연 7천만 원에 달하는 수익 효과를 거두고 있다. 
+						이러한 한계 속에서 서흥헬스케어는 국립원예특작과학원이 개발한 참당귀·황기 복합물의 전립선 질환 개선 조성물에서 새로운 해답을 찾아 나섰다. 
 					</p>
 					<p>
-						수치로도 충분히 입증된 성과지만, 김원태 대표가 말하는 진짜 가치는 그 너머에 있다. 김원태 대표는 열풍건초 생산 시스템을 통해 단순한 수입 대체 이상의 가치를 체감하고 있다. 안정적인 품질의 국산 건초를 직접 생산·급여함으로써 사료비를  절감하고, 수입 의존도를 낮췄을 뿐 아니라 기후 변화나 환율 급등 같은 외부 변수에도 흔들리지 않는 자급 체계를 구축한 것이다. 결국 열풍건초 생산 시스템은 값싼 사료 생산 기술이 아닌, 국내 축산의 지속성을 높이는 길이었다. 
+						“그동안 전립선 건강기능식품의 대표 원료는 쏘팔메토였어요. 하지만 대부분 수입산이었고, 효능과 안전성 논란도 끊이지 않았죠. 서흥헬스케어는 그 대체 소재로 국내산 약용작물인 ‘참당귀·황기 복합물’에 주목했고, 본격적인 개발을 시작했습니다. 특히 쏘팔메토가 전립선 건강에만 초점을 맞춘 단일 기능 원료라면, 참당귀·황기 복합물은 전립선 건강을 비롯해 세포 증식 억제, 호르몬 조절, 배뇨 개선, 활력 증진 등 다섯 가지 기능이 과학적으로 입증된 건강기능식품 원료입니다.”
 					</p>
-					<p>
-						“금액이나 품질보다 더 중요한 게 ‘자급률’이라고 봅니다. 수입 의존도를 낮춰야 외국과의 무역에서도 유연해지고, 기후나 환율 같은 변수에도 흔들리지 않거든요.”
-					</p>
-					<div class="article-icon-text">
-						<figure>
-							<img src="contents/sub_11_image_7.jpg">
-						</figure>
-						<div>
-							익산우유연구소의 요거트 구입처
-						</div>
-					</div>
-					<div class="article-image dual-image">
+					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_11_image_4.jpg">
 							</figure>
+						</div>
+					</div>
+					<p>
+						2023년부터 진행된 이번 개발은 시험관 시험과 동물 시험, 인체적용 시험을 거치며 기능성과 안전성을 과학적으로 입증했다. 이러한 연구를 통해 원료의 표준화와 안정성도 확립되었고, 그 결과 참당귀·황기 복합물은 전립선 건강 기능성 소재로서 식품의약품안전처의 개별인정(제2024-28호)을 받았다. 현재는 건강기능식품 원료로 품목신고와 본생산을 마친 상태로, 내년 상반기에는 다양한 제형의 완제품이 소비자들에게 선보일 예정이다.
+					</p>
+					<p>
+						“농촌진흥청은 정말 다양한 특용작물을 연구하고 있습니다. 기업으로서는 단독으로 감당하기 어려운 규모의 연구들이죠. 참당귀와 황기를 2:1 비율로 섞은 복합물을 만들기 위해 실험을 정말 많이 하셨어요. 원료의 표준화부터 제조, 생산 공정까지 체계적으로 세팅해 주셨고요. 덕분에 그 기술을 이전받아 제품 개발을 진행할 수 있었습니다.” 
+					</p>
+					<p>
+						좋은 연구 성과를 실제 제품으로 이어가기 위해 서흥헬스케어는 하드캡슐부터 고형 제형까지 다양한 형태를 검토하며 샘플을 제작했다. 완성된 샘플은 주변 대상자들에게 직접 평가를 받아봤는데, 반응이 매우 긍정적이었다. 전립선 문제로 인한 빈뇨가 개선되고 수면의 질이 좋아졌다는 피드백이 많았으며, 무엇보다 약이 아닌 건강기능식품이라 부작용에 대한 부담이 적어 안심할 수 있었다는 반응이 이어졌다. 
+					</p>
+					<div class="article-image ">
+						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_11_image_5.jpg">
 							</figure>
 						</div>
 					</div>
-					<h4>
-						자급에서 자립으로, 지속 가능한 축산의 길
-					</h4>
+					<h5>
+						글로벌 브랜드를 향한 서흥헬스케어의 도전 
+					</h5>
 					<p>
-						현재 김원태 대표는 효율성과 품질을 한 단계 더 높이기 위한 장비 개선 작업을 진행 중이다. 
+						서흥헬스케어는 본격적인 생산과 판매를 앞두고 안정적인 소재 공급을 위한 국내 기반도 마련했다. 이 과정에서도 농촌진흥청 특용작물과의 협력이 큰 힘이 됐다. 현재 제천·평창·영주 등 주요 약초 산지를 중심으로 원료를 확보할 수 있는 기반을 마련했으며, 특용작물과와의 협업을 통해 국내 약용작물의 표준화와 재배 체계를 구축했다. 이는 단순한 원료 확보를 넘어, 국산 약용작물 산업의 자립 기반을 다지는 중요한 과정으로 평가된다.
 					</p>
 					<p>
-						“똑같은 기계로 더 많은 양을 생산하면서도, 이물질 없는 깨끗한 건초를 만들려고 해요. 포장도 더 단단하고 치밀하게 바꾸는 중입니다. 유통비 절감도 고려해서요.”
+						참당귀·황기 복합물로 시작된 이번 연구는 단순한 제품 개발을 넘어, ‘우리 땅에서 자란 원료로 만드는 건강기능식품’이라는 새로운 모델을 제시하고 있다. 서흥헬스케어는 이러한 국산 기능성 소재를 기반으로 한 제품 개발을 이어가며, 체지방 감소나 인지기능 개선 등 차세대 개별인정형 기능성 원료 연구에도 박차를 가하고 있다.
 					</p>
 					<p>
-						이 개선 과정에는 국립축산과학원이 함께하고 있으며, 최근 농촌진흥청에서 개발한 이탈리안라이그라스 신품종 ‘스파이더’와의 궁합에도 큰 기대를 걸고 있다. 스파이더 라이그라스는 조단백 함량이 높아, 이를 건초로 만들 경우 가축에게 더 풍부한 영양분을 공급할 수 있을 것으로 기대된다.
+						“서흥헬스케어는 무엇보다 국산 자원과 천연물을 활용한 기능성 제품 개발에 집중하고 있습니다. 우리 땅에서 자란 원료로 건강기능식품을 만들고, 이를 바탕으로 세계 시장에 진출하는 것이 목표죠. K-팝, K-컬처처럼 국산 약초를 기반으로 한 ‘K-허브 산업’을 선도하며, 우리 땅의 원료로 만든 건강기능식품으로 세계 시장에서 인정받는 기업이 되고 싶습니다.”
 					</p>
 					<p>
-						김원태 대표의 다음 목표는 ‘확장’이다. 현재 하루 10톤 수준인 생산량을 100톤까지 끌어올려, 자신의 농장은 물론 익산 지역의 축산 농가와 승마·경마용 말, 염소, 양 등 다양한 가축에게도 안정적으로 공급할 수 있도록 하는 것이 그의 계획이다. 그리고 그의 도전은 조사료 생산에 머물지 않는다. 직접 생산한 사료로 기른 젖소의 우유를 활용해 요거트와 치즈 같은 유가공 제품을 꾸준히 생산하며, 생산과 소비가 이어지는 순환 구조를 만들어가고 있다.
-					</p>
-					<p>
-						“요거트 같은 경우는 꾸준히 생산하고 있어요. 축산물만 생산하면, 먹어주는 소비자가 없잖아요. 그래서 유자 요거트, 블루베리 요거트, 플레인 요거트, 스트링 치즈 같은 제품을 다양하게 시도하고 있습니다. 직접 만든 우유로 소비자와 연결되는 그 과정이 즐겁습니다.”
-					</p>
-					<p>
-						열풍건초 시스템으로 양질의 국산 조사료를 직접 생산하고, 그 사료로 기른 젖소의 우유로 다시 유제품을 만든다. 이 생산과 소비의 순환은 단순한 농장의 효율화를 넘어, 국내 축산의 자립과 지속 가능한 미래를 향한 걸음이다. 김원태 대표는 오늘도 현장에서, 기술로 농업의 내일을 만들어가고 있다. 
+						서흥헬스케어의 비전은 단순히 건강기능식품을 생산하는 데 그치지 않는다. 국민의 건강 증진을 위해 끊임없이 연구개발을 이어가며, 그 근원을 국내산 원료와 천연 자원에서 찾고 있다. 이는 제품 개발을 넘어 국산 원료 산업의 성장과 농가와의 상생으로 이어지는, 건강한 선순환의 길이다. 이제 서흥헬스케어는 우리 땅의 자원으로 세계의 건강을 지키는 첫걸음을 내딛으려 한다. 참당귀·황기 복합물의 상용화를 시작으로, 진정한 ‘K-허브’의 시대를 열어갈 것이다. 
 						<i class="icon_last"></i>
 					</p>
-					<div class="article-image big-image">
-						<div class="article-image-container">
-							<figure>
-								<img src="contents/sub_11_image_6.jpg">
-							</figure>
-						</div>
-					</div>
 					<!-- <div class="footnote">
 						<ol>
 							<li>
