--- a/sub_20.html
+++ b/sub_20.html
@@ -96,6 +96,9 @@ body {
 	position: relative;
 	margin-bottom: 5rem;
 }
+.box-1 {
+	padding-bottom: 3rem;
+}
 .trand-box-title {
 	border-bottom: var(--border);
 	background-color: #fff;
