--- a/sub_20.html
+++ b/sub_20.html
@@ -38,7 +38,7 @@ body {
 .article-header-container {
     grid-template-columns: 1fr;
     gap: 1rem;
-    padding: 0;
+    padding: 2rem 0 0;
     margin-bottom: 0;
     position: relative;
 }
